[metadata]
name = DGCS2EDI
version = file: VERSION.txt
license = MIT
description = Generate invoices in EDI format from DGCS System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ggfunnn/DGCS2EDI
author = Jakub Grzesista
author_email = kubagrzesista@gmail.com
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Other Audience
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Office/Business

[options]
packages =
    dgcs2edi
    gui
include_package_data = true
setup_requires =
    setuptools >=46.4
